# roly-poly

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  verify.yml
src/: commands.rs  database.rs  guild_data.rs  handler.rs  main.rs  role_management.rs  util.rs
