[package]
name = "roly-poly"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "*"
log = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
version = "0.11"
features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend", "utils"]