[package]
name = "roly-poly"
version = "0.2.0"
edition = "2021"

[dependencies]
bimap = { version = "0.6", features = ["serde"] }
env_logger = "*"
log = "*"
pickledb = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
version = "0.11"
features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend", "utils"]